<resources>
    <string name="app_name">ipcamera</string>
    <string name="authorities">com.afscope.authorities.fileprovider</string>

    <!-- 摄像头参数 -->
    <string name="bt_save_settings">应用</string>
    <string name="bt_recovery_to_default">默认</string>

    <string name="white_balance">白平衡</string>
    <string name="white_balance_auto">自动白平衡</string>
    <string name="exposure_and_gain">曝光与增益</string>
    <string name="exposure_auto">自动曝光</string>
    <string name="exposure_target">曝光目标亮度</string>
    <string name="exposure_time">曝光时间</string>
    <string name="gain">增益</string>

    <string name="color_settings">图像调整</string>
    <string name="color_hue">色调</string>
    <string name="color_saturation">饱和度</string>
    <string name="color_brightness">亮度</string>
    <string name="color_sharpness">锐度</string>
    <string name="color_contrast">对比度</string>
    <string name="color_gamma">伽马</string>

    <string name="focus_mode_and_area">聚焦模式与区域</string>
    <string name="focus_position">聚焦位置</string>
    <string name="focus_area_size">区域大小</string>
    <string name="focus_area_horizontal">水平</string>
    <string name="focus_area_vertical">垂直</string>
    <string name="focus_mode_auto">自动聚焦</string>
    <string name="focus_mode_quick">一键聚焦</string>
    <string name="focus_area_manual">手动聚焦</string>


    <string name="login_select_iP">请选择ip</string>

    <string-array name="focus_area_size_array">
        <item>小</item>
        <item>大</item>
    </string-array>
</resources>
